--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,3 +5,24 @@ stages:
     - src/load_data.py
     outs:
     - output/data.pkl
+  train:
+    cmd: python src/train.py
+    deps:
+    - output/data.pkl
+    - src/train.py
+    params:
+    - train.batch_size
+    - train.dropout
+    - train.hidden_units
+    - train.lr
+    - train.num_epochs
+    outs:
+    - output/model.h5
+    metrics:
+    - dvclive/metrics.json:
+        cache: false
+    plots:
+    - dvclive/plots/metrics/accuracy.tsv:
+        cache: false
+    - output/train_logs.csv:
+        cache: false
